<resources>
    <string name="app_name">EZmart</string>
    <string name="home_title">خانه</string>
    <string name="categories_title">دسته‌بندی‌ها</string>
    <string name="ez_description">"An image consist letters E and Z "</string>
    <string name="newest">تازه‌ها</string>
    <string name="best_seller">پرفروش‌ها</string>
    <string name="high_rates">بهترین‌ها</string>
    <string name="product_description">جزئیات محصول:</string>
    <string name="slash">/</string>
    <string name="connection_check_error">لطفا اتصال اینترنت خود را چک کنید.</string>
    <string name="see_details"><![CDATA[<< مشاهده جزئیات]]></string>
    <string name="search">سرچ</string>
    <string name="profile">پروفایل</string>
    <string name="shopping">سبد خرید</string>
    <string name="sort">مرتب‌سازی بر اساس:</string>
    <string name="product_reviews">نظر کاربران</string>
    <string name="review_by">توسط:</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="total_price">مجموع:</string>
    <string name="complete_the_shipping">تکمیل فرآیند خرید</string>
    <string name="already_have_an_an_account">قبلا ثبت نام کرده اید؟ ورود</string>
    <string name="name">نام</string>
    <string name="email">ایمیل</string>
    <string name="register">ثبت نام</string>
    <string name="do_filter">اعمال فیلتر</string>
    <string name="filterBy">فیلتر کردن نتایج:</string>
    <string name="reset_filter">حذف همه</string>
    <string name="related_products">محصولات مشابه</string>
    <string name="add_review">ثبت نظر</string>>
    <string name="review_rating">کیفیت این محصول را از یک تا پنج چگونه ارزیابی میکنید؟</string>
    <string name="review_text">جزئیات نظر خود را در قالب متنی بنویسید:</string>
    <string name="review_text_hint">محل نوشتن نظر</string>
    <string name="cancel">انصراف</string>
    <string name="send_review">ثبت</string>
    <string name="address_one">آدرس اول</string>
    <string name="address_two">آدرس دوم</string>
    <string name="add_new_address">افزودن آدرس جدید</string>
    <string name="save_address">انتخاب آدرس</string>
    <string name="permission_required">برای دریافت موقعیت شما به مجوز لوکیشن نیاز است.</string>
    <string name="got_it">متوجه شدم</string>
    <string name="enterAddress">جزئیات دقیق آدرس را وارد کنید.</string>
    <string name="addAddress">ذخیره آدرس</string>
    <string name="addressOnMap">انتخاب بر روی نقشه</string>
    <string name="getCurrentLocation">دریافت موقعیت فعلی</string>
    <string name="have_coupon">کد تخفیف دارید؟ وارد کنید.</string>
    <string name="check_coupon">اعمال تخفیف</string>
    <string name="final_price">قیمت نهایی:</string>
    <string name="register_order">ثبت سفارش</string>
    <string name="new_address">آدرس جدید</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="settings_brightness">تنظیمات روشنایی</string>
    <string name="app_theme">تم برنامه</string>
    <string name="auto_theme">خودکار</string>
    <string name="dark_theme">تاریک</string>
    <string name="light_theme">روشن</string>
    <string name="price_format">%,d تومان</string>
</resources>