<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_theme"
        android:textSize="25sp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btgTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_auto_theme"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="48dp"

            android:minHeight="48dp"
            android:text="@string/auto_theme" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dark_theme"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/dark_theme" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_light_theme"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/light_theme" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>